--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,23 @@
 .header__title{
   margin-left:50px;
 }
+
+.card-container{
+  display:flex;
+}
+
+.author-container{
+  display:flex;
+
+}
+
+.author-image{
+  width: 40px;
+  height: 40px;
+}
+
+.author-details{
+  display:flex;
+  flex-direction: column;
+  margin-left: 5px;
+}
