--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,13 @@
   margin-left:50px;
 }
 
+.message-list{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .card-container{
   display:flex;
   flex-direction: column;
